Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54426

Qt5WebEngineCore fails to link due to libatomic dependency

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.8.0 Alpha
    • 5.8.0 Alpha
    • WebEngine
    • None
    • Ubuntu 16.04 x86_64

      When building Qt WebEngine with a Qt build with -platform linux-clang

      Qt5WebEngineCore.so fails to link with error:

      /usr/bin/../lib/gcc/x86_64-linux-gnu/5.3.1/../../../../include/c++/5.3.1/bits/atomic_base.h:362: error: undefined reference to '__atomic_is_lock_free'
      /usr/bin/../lib/gcc/x86_64-linux-gnu/5.3.1/../../../../include/c++/5.3.1/bits/atomic_base.h:354: error: undefined reference to '__atomic_is_lock_free'
      clang: error: linker command failed with exit code 1 (use -v to see invocation)
      Makefile.core_module:161: recipe for target '/home/nezticle/Code/build/qt5-5.8-nogl/qtbase/lib/libQt5WebEngineCore.so.5.8.0' failed
      

      This seems to be because of a missing -latomic , which appears to be assumed when building with clang. However when building with clang without libc++, you still need to use -latomic.

        For Gerrit Dashboard: QTBUG-54426
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            janichol Andy Nichols
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes