Fix clang and embedded gcc builds

Work around two clang issues, one causing a warning in v8 which uses
-Werror, and one causing a dependency on libatomic because clang
doesn't have internal atomic handling.

The latter also affects some embedded gcc builds.

Task-number: QTBUG-54426
Change-Id: I7e82ffc2919ea0c5726b3ad11084871917534e4c
Reviewed-by: Michal Klocek <michal.klocek@qt.io>