chromium/base/metrics/persistent_memory_allocator.cc
@@ -350,10 +350,13 @@ PersistentMemoryAllocator::PersistentMemoryAllocator(Memory memory,
 
   // These atomics operate inter-process and so must be lock-free. The local
   // casts are to make sure it can be evaluated at compile time to a constant.
+#ifndef TOOLKIT_QT
+  // These can not be inlined by clang-libstdc++ and some embedded GCC versions
   CHECK(((SharedMetadata*)nullptr)->freeptr.is_lock_free());
   CHECK(((SharedMetadata*)nullptr)->flags.is_lock_free());
   CHECK(((BlockHeader*)nullptr)->next.is_lock_free());
   CHECK(corrupt_.is_lock_free());
+#endif
 
   if (shared_meta()->cookie != kGlobalCookie) {
     if (readonly) {
